# M1-2022-rattrapage

./: README.md  pyproject.toml  setup.py
.github/workflows/: coverage.yml  test_et_build.yml
src/fibonacci/: fibonacci.py
test/: test_fibonacci.py
