[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fibonacci_rattrapages"
version = "0.0.1"
authors = [
  { name="Your name", email="your.name@isen.yncrea.fr" },
]
description = "Package that provides an implementation of fibonacci sequence"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
